[2.7] bpo-30807: signal.setitimer() may disable the timer by mistake (GH-2493)

* bpo-30807: signal.setitimer() may disable the timer by mistake

* Add NEWS blurb.
(cherry picked from commit 729780a810bbcb12b245a1b652302a601fc9f6fd)